--- a/index.css
+++ b/index.css
@@ -508,11 +508,14 @@ nav {
     backdrop-filter: blur(10px);
     background-color: #ffffff0e;
     border: 2px solid transparent;
+    border-color: #ffffff33;
 }
 
 .hero-buttons a:hover {
     background-color: #ffffff27;
     transform: translateY(-3px);
+    transition: 0.25s ease-in-out;
+    border: 3px solid transparent;
     border-color: var(--text-color);
     box-shadow: 0px 0px 10px var(--text-color);
 }
