--- a/index.css
+++ b/index.css
@@ -157,7 +157,7 @@ nav {
     align-items: center;
     justify-content: center;
     text-align: center;
-    background: url('/images/hero.png') no-repeat center top;
+    background: url('images/hero.png') no-repeat center top;
 }
 
 .hero-content h1 {
