--- a/index.css
+++ b/index.css
@@ -152,11 +152,13 @@ nav {
 
 
 .hero {
+    text-align: center;
     height: 60rem;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
-    text-align: center;
+    padding: 40px 0;
     background: url('images/hero.png') no-repeat center top;
 }
 
@@ -518,4 +520,15 @@ nav {
     border: 3px solid transparent;
     border-color: var(--text-color);
     box-shadow: 0px 0px 10px var(--text-color);
+}
+
+.hero-logo {
+    margin-bottom: 20px;
+}
+
+.hero-logo img.hero-banner {
+    max-width: 40%;
+    height: auto;
+    display: block;
+    margin: 0 auto;
 }
