--- a/index.css
+++ b/index.css
@@ -172,7 +172,6 @@ nav {
     z-index: 1;
     margin-top: -5rem;
     clip-path: polygon(0 5%, 100% 0, 100% 100%, 0 95%);
-    animation: fadeInUp 1s ease;
 }
 
 .season-content {
@@ -183,6 +182,7 @@ nav {
     justify-content: space-between;
     align-items: center;
     width: 100%;
+    
 }
 
 .season-text {
@@ -296,7 +296,7 @@ nav {
     cursor: pointer;
     font-size: clamp(1rem, 3vw, 1.2rem);
     color: var(--text-color);
-    background-color: #b0e0e685;
+    background-color: #b0e0e6c9;
     transition: background-color 0.3s ease;
 }
 
@@ -305,6 +305,7 @@ nav {
 }
 
 .faq-answer {
+    background-color: #b0e0e685;
     padding: 0 15px;
     max-height: 0;
     overflow: hidden;
@@ -475,18 +476,35 @@ footer p {
     .season-image img {
         max-height: 400px;
     }
-}
-
-@media screen and (max-width: 480px) {
-    .hero h1 {
-        font-size: 3rem;
-    }
-
-    .hero-buttons {
+    .join-content {
         flex-direction: column;
-        gap: 15px;
+        text-align: center;
+    }
+    
+    .join-title {
+        font-size: 48px;
+    }
+    
+    .join-image {
+        margin-top: 40px;
+    }
+    
+    .join-image img {
+        max-height: 35rem;
+        margin-right: -15rem;
+        margin-left: 12rem;
+
+    }
+
+    .hero-logo img.hero-banner {
+        max-width: 50rem;
+        height: 5rem;
+        width: auto;
+        max-height: 50rem;
+        display: block;
     }
 }
+
 
 html {
     scroll-behavior: smooth;
