--- a/index.css
+++ b/index.css
@@ -555,6 +555,43 @@ section {
 .join-image img {
     max-width: 35rem;
     border-radius: 15px;
-    margin-right: 5rem;
+    
     animation: fadeInLeft 1s ease-in-out;
 }
+
+.season-image img {
+    max-height: 600px;
+    max-width: 100%;
+    object-fit: contain;
+}
+
+
+
+@media screen and (max-width: 768px) {
+    .season-image img {
+        max-width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+
+    .join-image img {
+        margin-right: 0;
+        margin-left: 4rem;
+        max-width: 20rem;
+        height: auto;
+        
+    }
+
+    .season-content,
+    .join-content {
+        flex-direction: column;
+        align-items: center;
+        text-align: center;
+    }
+
+    .season-text,
+    .join-text {
+        margin-bottom: 20px;
+    }
+}
+
