fuck u fuck u you little prick kys css you suck ass

--- a/index.css
+++ b/index.css
@@ -576,8 +576,8 @@ section {
 
     .join-image img {
         margin-right: 0;
-        max-width: 25rem;
-        margin-left: -1rem;
+        max-width: 100%;
+        margin-left: 0;
         height: auto;
         
     }
