--- a/index.css
+++ b/index.css
@@ -575,9 +575,9 @@ section {
     }
 
     .join-image img {
-        margin-right: 0;
-        max-width: 100%;
-        margin-left: 0;
+        margin-right: -2rem;
+        max-width: 80%;
+        margin-left: -2rem;
         height: auto;
         
     }
