--- a/index.css
+++ b/index.css
@@ -503,6 +503,17 @@ footer p {
         max-height: 50rem;
         display: block;
     }
+    .hero-buttons {
+        margin-left: 0;
+        margin-right: 0;
+        gap: 0;
+    }
+    
+    .hero-buttons a {
+        margin-left: 0;
+        margin-right: 3px;
+        gap: 1rem;
+    }
 }
 
 
